--- a/assets/package.json
+++ b/assets/package.json
@@ -1,28 +1,21 @@
 {
   "repository": {},
   "description": " ",
+  "private": "true",
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production",
-    "watch": "webpack --mode development --watch"
+    "dev": "vite --host 0.0.0.0",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
+    "@babel/helper-compilation-targets": "^7.13.16",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "sass-loader": "^8.0.2",
-    "node-sass": "^4.13.1",
-    "hard-source-webpack-plugin": "^0.13.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "terser-webpack-plugin": "^2.3.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.2"
+    "sass": "^1.34.0",
+    "typescript": "^4.2.4",
+    "vite": "^2.3.3"
   }
 }
